tests/files/type_checker_tests/should_fail/112.cmdr
//Should fail post-decrement on something not a lvalue
false--;
